# speedwagon_scripts

./: .pre-commit-config.yaml  Jenkinsfile  README.md  make_standalone.bat  make_standalone.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: sonarcloud.yml  test.yml
ci/jenkins/scripts/: new-uv-global-config.ps1
package_speedwagon/: __main__.py  defaults.py  freeze.py  installer.py  package_speedwagon.py  speedwagon-bootstrap.py  utils.py
packaging/: package_speedwagon.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-run.txt  requirements.in
tests/: test_freeze.py  test_installer.py  test_package_speedwagon.py  test_utils.py
