[project]
name = "package_speedwagon"
version = "0.1.0"

dependencies = [
    'PyInstaller',
    'cmake',
    'pip'
]
requires-python = ">=3.11"

[project.scripts]
package_speedwagon="package_speedwagon.package_speedwagon:main"

[tool.setuptools.package-data]
package_speedwagon = [
    'favicon.icns',
    'favicon.ico',
    'favicon.png',
]
[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
markers =[
    "slow: mark test as slow."
]
[tool.coverage.run]
omit = ["*.spec"]