[project]
name = "package_speedwagon"
version = "0.1.4"

dependencies = [
    'PyInstaller',
    'cmake',
    "tomlkit",
    'pip>=26.1'
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
tox = ['tox']
tox-uv = [
    {include-group = "tox"},
    "tox-uv-bare"
]
type-checking = [
    "mypy",
    "types-pyinstaller",
    "lxml",
]
test = [
    "pytest",
]
dev = [
    "coverage",
    "pre-commit",
    "ruff",
    "types-pyinstaller",
    {include-group = "type-checking"},
    {include-group = "test"},
    {include-group = "tox"},
]
ci = [
    {include-group = "dev"},
]
[project.scripts]
package_speedwagon="package_speedwagon.package_speedwagon:main"

[tool.mypy]
exclude = [
    "package_speedwagon/speedwagon-bootstrap.py"
]

[tool.setuptools]
packages = ["package_speedwagon"]

[tool.setuptools.package-data]
package_speedwagon = [
    'favicon.icns',
    'favicon.ico',
    'favicon.png',
]
[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
markers =[
    "slow: mark test as slow."
]
[tool.coverage.run]
omit = ["*.spec"]

[tool.uv.sources]
speedwagon = {index = "uiuc_prescon_python"}

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true